# GIAE

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  WHITEPAPER.md  docker-compose.yml  dump.rdb  giae_api.db.bak  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
case_studies/: Mu.gb  Mu_offline.md  P22_offline.md  T4_offline.md  T7_offline.md  lambda_offline.md  lambda_online.md  lambda_report.md  lambda_report_v2.md  phi29.gb  phi29_offline.md  phiX174_offline.md  phiX174_online.md
changelog/: index.html
contributing/: index.html
data/functional/: pfam_categories.tsv
docs/: api.md  architecture.md  benchmarks.md  changelog.md  cli.md  contributing.md  deployment.md  extending.md  index.md  python_api.md  quickstart.md  rest_api.md  roadmap.md
docs/tutorials/: phage.md
frontend/: .env.local.example  .gitignore  Dockerfile  bunfig.toml  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/database/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/keys/: page.tsx
frontend/app/upgrade/: page.tsx
frontend/components/: explainability-panel.tsx  genome-track.tsx  hero-preview.tsx  nav.tsx  providers.tsx  theme.tsx  upload-zone.tsx
post_assets/: HANDOFF.md  bakta_comparison.py  phase1_smoke_test.py  phase4_validation.py  run_offline.py  screenshot.py
post_assets/lambda/: lambda.html  lambda.json  lambda.md
post_assets/phiX174/: phiX174.html  phiX174.json  phiX174.md
quickstart/: index.html
roadmap/: index.html
scripts/: clean_stale_jobs.py  dev.sh
search/: search_index.json
sql/: init.sql
src/giae/: __init__.py
src/giae/analysis/: __init__.py  ai.py  aragorn.py  barrnap.py  blast_local.py  cache.py  diamond.py  functional_annotator.py  hmmer.py  homology.py  interpro.py  motif.py  nested_orf_finder.py  orf_finder.py  product_normalizer.py  prosite.py  short_orf_rescue.py  throttle.py  uniprot.py
src/giae/cli/: __init__.py  db.py  main.py  serve.py
src/giae/engine/: __init__.py  aggregator.py  confidence.py  conflict.py  hypothesis.py  interpreter.py  novelty.py  plugin.py
src/giae/models/: __init__.py  evidence.py  gene.py  genome.py  interpretation.py  protein.py
src/giae/output/: __init__.py  html_report.py  json_export.py  reasoning.py  report.py
src/giae/parsers/: __init__.py  base.py  (+2 more)
src/giae_api/: auth.py  database.py  main.py  models.py  worker.py
tests/: test_analysis.py  test_api.py  test_cache.py  test_cli.py  test_conflict.py  test_engine.py  test_functional_annotation.py  test_html_report.py  test_integration_full.py  test_interpro.py  test_models.py  test_nested_orf_finder.py  test_novelty.py  test_output.py  test_parsers.py
tests/fixtures/: sample.fasta  sample.gb
tutorials/phage/: index.html
(+5 files in other folders)
