[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giae"
version = "0.2.2"
description = "Genome Interpretation & Annotation Engine - An Explainable, Evidence-Centric Framework for Genomic Interpretation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "GIAE Contributors" }
]
keywords = [
    "bioinformatics",
    "genomics",
    "annotation",
    "interpretation",
    "biopython",
    "explainable-ai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

dependencies = [
    "biopython>=1.83",
    "numpy>=1.20.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
annotation = [
    "pyrodigal>=3.0",
]
hmmer = [
    "pyhmmer>=0.10.0",
]
ai = [
    "fair-esm>=2.0.0",
    "torch>=2.0.0",
]
api = [
    "fastapi[standard]>=0.100.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.9",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
]

[project.scripts]
giae = "giae.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Ayo-Cyber/GIAE"
Documentation = "https://github.com/Ayo-Cyber/GIAE#readme"
Repository = "https://github.com/Ayo-Cyber/GIAE.git"
Issues = "https://github.com/Ayo-Cyber/GIAE/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/giae"]

[tool.hatch.build.targets.wheel.force-include]
"data/prosite/prosite.dat" = "giae/data/prosite/prosite.dat"

[tool.hatch.build.targets.sdist]
include = [
    "src/giae/",
    "data/prosite/prosite.dat",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/giae"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
